--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -77,7 +77,7 @@ jobs:
         if: success() && github.event_name != 'pull_request' && github.repository == 'smallyel/Anywhere-'
         uses: zhaobozhen/AppCenter-Github-Action@1.0.1
         with:
-          command: appcenter crashes upload-mappings --mapping app/build/outputs/mapping/release/mapping.txt --version-name ${{ steps.apk-info.outputs.version-name }} --version-code ${{ steps.apk-info.outputs.version-code }} --app smallyel2025-gmail.com/Anywhere
+          command: appcenter crashes upload-mappings --mapping app/build/outputs/mapping/release/mapping.txt --version-name ${{ steps.apk-info.outputs.version-name }} --version-code ${{ steps.apk-info.outputs.version-code }} --app zhaobozhen2025-gmail.com/Anywhere
           token: ${{secrets.APP_CENTER_TOKEN}}
       - name: Send commit to telegram
         if: success() && github.repository == 'smallyel/Anywhere-' && github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
